--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <body>
         <div>
-            <img id="gen-img" src="/assets/white.png">
+            <img id="gen-img" src="assets/white.png">
         </div>
                 
         <div>
