--- a/index.html
+++ b/index.html
@@ -23,8 +23,22 @@
         </div>
                 
         <div>
+            <button onclick="imgchange();"> </button>
+            <button onclick="imgchange();"> </button>
+            <button onclick="imgchange();"> </button>
+            <button onclick="imgchange();"> </button>
+            <button onclick="imgchange();"> </button>
+            <button onclick="imgchange();"> </button>
+            <button onclick="imgchange();"> </button>
+            <button onclick="imgchange();"> </button>
+            <button onclick="imgchange();"> </button>
+        </div>
+
+        <div>
             <p><input type="button" value="Play" onclick="imgchange();" /></p>
         </div>
+
+        
 
 
 
