--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
                 
         <div>
             <p></p>
-            <button onclick="imgchange();"> </button>
-            <button onclick="imgchange();"> </button>
-            <button onclick="imgchange();"> </button>
+            <button onclick="imgchange();">?</button>
+            <button onclick="imgchange();">?</button>
+            <button onclick="imgchange();">?</button>
             <p></p>
-            <button onclick="imgchange();"> </button>
-            <button onclick="imgchange();"> </button>
-            <button onclick="imgchange();"> </button>
+            <button onclick="imgchange();">?</button>
+            <button onclick="imgchange();">?</button>
+            <button onclick="imgchange();">?</button>
             <p></p>
-            <button onclick="imgchange();"> </button>
-            <button onclick="imgchange();"> </button>
-            <button onclick="imgchange();"> </button>
+            <button onclick="imgchange();">?</button>
+            <button onclick="imgchange();">?</button>
+            <button onclick="imgchange();">?</button>
         </div>
 
         <div>
