--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     </head>
 
     <body>
+        <div class="jackpot">
+            $1,000,000
+        </div>
+
+        <p></p>
+
         <div>
             <img id="gen-img" src="assets/white.png">
         </div>
