--- a/index.html
+++ b/index.html
@@ -30,22 +30,21 @@
                 
         <div>
             <p></p>
-            <button onclick="imgchange();">?</button>
-            <button onclick="imgchange();">?</button>
-            <button onclick="imgchange();">?</button>
-            <p></p>
-            <button onclick="imgchange();">?</button>
-            <button onclick="imgchange();">?</button>
-            <button onclick="imgchange();">?</button>
-            <p></p>
-            <button onclick="imgchange();">?</button>
-            <button onclick="imgchange();">?</button>
-            <button onclick="imgchange();">?</button>
+            <button onclick="imgchange();">2x</button>
+            <button onclick="imgchange();">3x</button>
+            <button onclick="imgchange();">4x</button>
+            <button onclick="imgchange();">5x</button>
+            <button onclick="imgchange();">6x</button>
+            <button onclick="imgchange();">7x</button>
+            <button onclick="imgchange();">8x</button>
+            <button onclick="imgchange();">9x</button>
+            <button onclick="imgchange();">10x</button>
+
             <p></p>
         </div>
 
         <div>
-            <p><input type="button" value="Play" onclick="imgchange();" /></p>
+            <p><input type="button" value="Quick Play All" onclick="imgchange();" /></p>
         </div>
 
         
