--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
                 
         <div>
             <p></p>
-            <img id="gen-img1" class="draw" src="assets/1.png">
-            <img id="gen-img2" class="draw" src="assets/2.png">
-            <img id="gen-img3" class="draw" src="assets/3.png">
-            <img id="gen-img4" class="draw" src="assets/4.png">
-            <img id="gen-img5" class="draw" src="assets/5.png">
-            <img id="gen-img6" class="draw" src="assets/6.png">
-            <img id="gen-img7" class="draw" src="assets/7.png">
-            <img id="gen-img8" class="draw" src="assets/8.png">
-            <img id="gen-img9" class="draw" src="assets/9.png">
+            <img id="gen-img1" class="draw">
+            <img id="gen-img2" class="draw">
+            <img id="gen-img3" class="draw">
+            <img id="gen-img4" class="draw">
+            <img id="gen-img5" class="draw">
+            <img id="gen-img6" class="draw">
+            <img id="gen-img7" class="draw">
+            <img id="gen-img8" class="draw">
+            <img id="gen-img9" class="draw">
 
             <p></p>
         </div>
