--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         
         <div>
-            <p><input type="button" value="Quick Play All" onclick="imgchangedraw();" /></p>
+            <p><input type="button" value="Quick Draw" onclick="imgchangedraw();" /></p>
         </div>
 
         
