--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
         
         <div>
-            <p><input type="button" value="Quick Draw" onclick="imgchangedraw();" /></p>
+            <p><input type="button" value="Quick Draw" onclick="imgchangedraw1(); imgchangedraw2(); imgchangedraw3(); imgchangedraw4(); imgchangedraw5(); imgchangedraw6(); imgchangedraw7(); imgchangedraw8(); imgchangedraw9();" /></p>
         </div>
 
         
