--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     </head>
 
     <body>
+        <div class="parentSpace">
+            <div class="left"><img src="/assets/pat.png" id="patHome"></div>
+            <div class="center">Ross</div>
+            <div class="right">$30</div>
+        </div>
+        <br>
         <div class="jackpot">
             $1,000,000
         </div>
