--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
     </head>
 
     <body>
-        <div class="parentSpace">
+        <div class="header">
             <div class="left"><img src="/assets/pat.png" id="patHome"></div>
-            <div class="center">Ross</div>
+            <div class="center"></div>
             <div class="right">$30</div>
         </div>
         <br>
+        
         <div class="jackpot">
             $1,000,000
         </div>
+    i*
 
         <p></p>
 
