--- a/index.html
+++ b/index.html
@@ -26,11 +26,17 @@
         <a href="#home" class="active"></a>
         <!-- Navigation links (hidden by default) -->
         <div id="myLinks">
-          <a href="#news">News</a>
+          <a href="#news">SuperFlip</a>
           <p></p>
-          <a href="#contact">Contact</a>
+          <a href="#contact">Sports</a>
           <p></p>
-          <a href="#about">About</a>
+          <a href="#about">NZero</a>
+          <p></p>
+          <a href="#about">ABC</a>
+          <p></p>
+          <a href="#about">NFT</a>
+          <p></p>
+          <a href="#about">SuperSpin</a>
           <p></p>
         </div>
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
