--- a/home.html
+++ b/home.html
@@ -55,31 +55,36 @@
          </Section>
          <!-- Games -->
         <Section id="game1" class="gameBox">
+            <img src="/assets/d7.png">
             NFTspin
          </Section>
          <Section id="game2" class="gameBox">
+            <img src="/assets/az1.png">
             Anybet
          </Section>
          <Section id="game3" class="gameBox">
-            <img src="/assets/SuperFlip Gif.gif" height="100px" width="100px">
+            <img src="/assets/SuperFlip Gif.gif">
             Superflip
          </Section>
          <Section id="game4" class="gameBox">
+            <img src="/assets/red.png">
             Progressive Win
          </Section>
          <Section id="game5" class="gameBox">
+            <img src="/assets/bayc1.png">
             NZero
          </Section>
          <Section id="game6" class="gameBox">
+            <img src="/assets/d3.png">
             Sports
          </Section>
 
         <!-- Promos -->
         <Section id="game1" class="promoBox">
-            Promo1
+            <img src="/assets/Transparent.png">
          </Section>
          <Section id="game2" class="promoBox">
-            Promo2
+            <img src="/assets/BlueBanner.png">
          </Section>
         
 
