--- a/home.html
+++ b/home.html
@@ -17,36 +17,15 @@
             <meta name="keywords" content="Mobile game, cool new apps, fun mobile games, auto battler">
     </head>
 
- <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
- <!-- Top Navigation Menu -->
+ <!-- Header -->
+ <header>
  <div class="header">
-    <div class="topnav">
-        <a href="#home" class="active"></a>
-        <!-- Navigation links (hidden by default) -->
-        <div id="myLinks">
-          <a href="#news">SuperFlip</a>
-          <p></p>
-          <a href="#contact">Sports</a>
-          <p></p>
-          <a href="#about">NZero</a>
-          <p></p>
-          <a href="#about">ABC</a>
-          <p></p>
-          <a href="#about">NFT</a>
-          <p></p>
-          <a href="#about">SuperSpin</a>
-          <p></p>
-        </div>
-        <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
-        </a>
-        <div class="right">$30</div>
-      </div>
+    <div class="left"><a href="/home.html">TiP</a></div>
+    <div class="center">Home</div>
+    <div class="right">$30</div>
+ </div>
+</header>
     
-</div>
 
     <body>
         <!-- Main Million Dollar Game -->
@@ -56,27 +35,27 @@
          <!-- Games -->
         <Section id="game1" class="gameBox">
             <img src="/assets/d7.png">
-            NFTspin
+            <div><a href="/nftspin.html">NFTspin</a></div>
          </Section>
          <Section id="game2" class="gameBox">
             <img src="/assets/az1.png">
-            Anybet
+            <div><a href="/anybet.html">ANYBet</a></div>
          </Section>
          <Section id="game3" class="gameBox">
             <img src="/assets/SuperFlip Gif.gif">
-            Superflip
+            <div><a href="/superflip.html">SuperFlip</a></div>
          </Section>
          <Section id="game4" class="gameBox">
             <img src="/assets/red.png">
-            Progressive Win
+            <div><a href="/wenwin.html">Wen-Win</a></div>
          </Section>
          <Section id="game5" class="gameBox">
             <img src="/assets/bayc1.png">
-            NZero
+            <div><a href="/notzero.html">NotZero</a></div>
          </Section>
          <Section id="game6" class="gameBox">
             <img src="/assets/d3.png">
-            Sports
+            <div><a href="/sports.html">Sports</a></div>
          </Section>
 
         <!-- Promos -->
