--- a/home.html
+++ b/home.html
@@ -33,30 +33,47 @@
             $1,000,000
          </Section>
          <!-- Games -->
+         <a href="/nftspin.html">
         <Section id="game1" class="gameBox">
             <img src="/assets/d7.png">
-            <div><a href="/nftspin.html">NFTspin</a></div>
+            <div>NFTspin</div>     
          </Section>
+        </a>
+
+         <a href="/anybet.html">
          <Section id="game2" class="gameBox">
             <img src="/assets/az1.png">
-            <div><a href="/anybet.html">ANYBet</a></div>
+            <div>ANYBet</div>
          </Section>
+        </a>
+
+        <a href="/superflip.html">
          <Section id="game3" class="gameBox">
             <img src="/assets/SuperFlip Gif.gif">
-            <div><a href="/superflip.html">SuperFlip</a></div>
+            <div>SuperFlip</div>
          </Section>
+        </a>
+
+         <a href="/wenwin.html">
          <Section id="game4" class="gameBox">
             <img src="/assets/red.png">
-            <div><a href="/wenwin.html">Wen-Win</a></div>
+            <div>Wen-Win</div>
          </Section>
+        </a>
+
+         <a href="/notzero.html">
          <Section id="game5" class="gameBox">
             <img src="/assets/bayc1.png">
-            <div><a href="/notzero.html">NotZero</a></div>
+            <div>Not Zero</div>
          </Section>
+        </a>
+
+         <a href="/sports.html">
          <Section id="game6" class="gameBox">
             <img src="/assets/d3.png">
-            <div><a href="/sports.html">Sports</a></div>
+            <div>Sports</div>
          </Section>
+        </a>
 
         <!-- Promos -->
         <Section id="game1" class="promoBox">
