--- a/nftspin.html
+++ b/nftspin.html
@@ -21,7 +21,7 @@
  <header>
     <div class="header">
        <div class="left"><a href="/home.html">TiP</a></div>
-       <div class="center">Not Zero</div>
+       <div class="center">NFT Spin</div>
        <div class="right">$30</div>
     </div>
    </header>
