--- a/anybet.html
+++ b/anybet.html
@@ -22,7 +22,7 @@
  <div class="header">
     <div class="left"><a href="/home.html">TiP</a></div>
     <div class="center">ANYBet</div>
-    <div class="right">$30</div>
+    <div class="right">$<span id="userBalance">30</span></div>
  </div>
 </header>
     
