--- a/home.html
+++ b/home.html
@@ -29,13 +29,14 @@
 
     <body>
         <!-- Main Million Dollar Game -->
-        <Section id="million" class="millionBox">
-            $1,000,000
+        
+        <Section id="promo1" class="promoBox">
+            <img src="/assets/Big Winner.png">
          </Section>
          <!-- Games -->
          <a href="/nftspin.html">
         <Section id="game1" class="gameBox">
-            <img src="/assets/d7.png">
+            <img src="/assets/NFTSpin.gif">
             <div>NFTspin</div>     
          </Section>
         </a>
@@ -56,7 +57,7 @@
 
          <a href="/wenwin.html">
          <Section id="game4" class="gameBox">
-            <img src="/assets/red.png">
+            <img src="/assets/wenwin.gif">
             <div>Wen-Win</div>
          </Section>
         </a>
@@ -76,11 +77,11 @@
         </a>
 
         <!-- Promos -->
-        <Section id="game1" class="promoBox">
-            <img src="/assets/Transparent.png">
+        <Section id="promo2" class="promoBox">
+            <img src="/assets/Megasol.png">
          </Section>
-         <Section id="game2" class="promoBox">
-            <img src="/assets/BlueBanner.png">
+         <Section id="promo3" class="promoBox">
+            <img src="/assets/Big Winner.png">
          </Section>
         
 
