--- a/anybet.html
+++ b/anybet.html
@@ -21,7 +21,7 @@
  <header>
  <div class="header">
     <div class="left"><a href="/index.html">TiP</a></div>
-    <div class="center">ANYBet</div>
+    <div class="center"></div>
     <div class="right">$<span id="userBalance">1000</span></div>
  </div>
 </header>
@@ -29,9 +29,7 @@
 
     <body id="anybetPage">
       
-        <div class="anybetLogoContainer">
             <h1 class="anybetHeading">ANYBet</h1>
-          </div>
           
     <section>
         <div class="bet-box">
