--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
          </Section>
         </a>
 
-        <a href="/sports.html">
-         <Section id="game6" class="gameBox3">
-            <img src="/assets/d3.png">
-            <div>Sports</div>
+        <a href="/anybet.html">
+         <Section id="game6" class="gameBox3">           
+                <h2 class="anybetHeading">ANYBet</h2>
          </Section>
+         <div>ANYBet</div>
         </a>
 
-          <a href="/notzero.html">
+          <a href="/sports.html">
          <Section id="game5" class="gameBox4">
             <img src="/assets/bayc1.png">
-            <div>Not Zero</div>
+            <div>Sports</div>
          </Section>
         </a>
         <a href="/notzero.html">
