--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
          </Section>
         </a>
 
+        
          <a href="/anybet.html">
          <Section id="game2" class="gameBox2">
             <img src="/assets/az1.png">
@@ -59,6 +60,7 @@
          </Section>
         </a>
 
+        <section id="game2" class="gameBox2Small">
         <a href="/superflip.html">
          <Section id="game3" class="gameBox">
             <img src="/assets/SuperFlip Gif.gif">
@@ -72,6 +74,7 @@
             <div>Wen-Win</div>
          </Section>
         </a>
+    </section>
 
         <a href="/anybet.html">
          <Section id="game6" class="gameBox3">           
