--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
          </Section>
         </a>
 
-        
+    <section id="game2Small" class="gameBox3Block">
+
          <a href="/anybet.html">
          <Section id="game2" class="gameBox2">
             <img src="/assets/az1.png">
@@ -60,7 +61,8 @@
          </Section>
         </a>
 
-        <section id="game2" class="gameBox2Small">
+    <section id="game2Small" class="gameBox2Small">
+
         <a href="/superflip.html">
          <Section id="game3" class="gameBox">
             <img src="/assets/SuperFlip Gif.gif">
@@ -74,7 +76,9 @@
             <div>Wen-Win</div>
          </Section>
         </a>
+
     </section>
+</Section>
 
         <a href="/anybet.html">
          <Section id="game6" class="gameBox3">           
