--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  <header>
  <div class="header">
     <div class="left"><a href="/home.html">TiP</a></div>
-    <div class="center">Home</div>
+    <div class="center"></div>
     <div class="right">$30</div>
  </div>
 </header>
@@ -37,6 +37,7 @@
     <span style="--i:8">0</span>
     <span style="--i:9">0</span>
     <span style="--i:10">0</span>
+    <br>SLOTS JACKPOT
    </div>
     
 
@@ -84,7 +85,7 @@
          <Section id="game6" class="gameBox3">           
                 <h2 class="anybetHeading">ANYBet</h2>
          </Section>
-         <div>ANYBet</div>
+         <div>Any Bet, Instant Wins</div>
         </a>
 
           <a href="/sports.html">
