--- a/anybet.html
+++ b/anybet.html
@@ -45,7 +45,7 @@
 
             <div>
                 <br>
-                <h2 id="anybetResultA"><span id="anybetResult">ok</span></h2>
+                <h2 id="anybetResultA" class=""><span id="anybetResult">ok</span></h2>
             </Div>
                 
               </div>
