--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
          <a href="/anybet.html">
          <Section id="game2" class="gameBox2">
             <img src="/assets/az1.png">
-            <div>ANYBet</div>
+            <div>Progressive Roulette</div>
          </Section>
         </a>
 
@@ -81,14 +81,20 @@
     </section>
 </Section>
 
-        <a href="/anybet.html">
-         <Section id="game6" class="gameBox3">           
-                <h2 class="anybetHeading">ANYBet</h2>
-         </Section>
-         <div>Any Bet, Instant Wins</div>
-        </a>
+<section id="game6" class="bet-box1">
+        <form>
+            <a href="/anybet.html">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <h2 class="anybetHeading">ANYBet</h2>
+            <i id="greyText">The Choice Is Yours</i>     
+          </a>          
+        </form>
+</section>
 
-          <a href="/sports.html">
+        <a href="/sports.html">
          <Section id="game5" class="gameBox4">
             <img src="/assets/bayc1.png">
             <div>Sports</div>
