--- a/anybet.html
+++ b/anybet.html
@@ -43,10 +43,9 @@
               <div class="user-box2">
                 <input type="number" name="" required placeholder="1000" id="win"> 
 
-            <div>
-                <br>
-                <h2 id="anybetResultA" class=""><span id="anybetResult">ok</span></h2>
-            </Div>
+            <section class="anybetRes">
+                <h2 id="anybetResultA" class=""><span id="anybetResult">__</span></h2>
+            </section>
                 
               </div>
               <a href="#" type="submit" onclick="betWin()">
