--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
  <!-- Header -->
  <header>
  <div class="header">
-    <div class="left"><a href="/home.html">TiP</a></div>
-    <div class="center"></div>
+    <div class="left"><a href="/home.html"><i class="fa-solid fa-house"></i></a></div>
+    <div class="center">Trust in Pat</div>
     <div class="right">$30</div>
  </div>
 </header>
