--- a/nftspin.html
+++ b/nftspin.html
@@ -20,17 +20,28 @@
  <!-- Header -->
  <header>
     <div class="header">
-        <div class="left"><a href="/index.html">TiP</a></div>
-       <div class="center">NFT Spin</div>
+        <div class="left"><a href="/index.html"><i class="fa-solid fa-house"></i></a></div>
+    <div class="center">Trust in Pat</div>
        <div class="right">$30</div>
     </div>
    </header>
        
+   
 
     <body>
-         <div class="jackpot">
-            $1,000,000
-        </div>
+        <div class="waviy">
+            <span style="--i:1">$</span>
+            <span style="--i:2">1</span>
+            <span style="--i:3">,</span>
+            <span style="--i:4">0</span>
+            <span style="--i:5">0</span>
+            <span style="--i:6">0</span>
+            <span style="--i:7">,</span>
+            <span style="--i:8">0</span>
+            <span style="--i:9">0</span>
+            <span style="--i:10">0</span>
+            <br>SLOTS JACKPOT
+           </div>
         <p></p>
         <div>
             <img id="gen-img">
