--- a/anybet.html
+++ b/anybet.html
@@ -20,8 +20,8 @@
  <!-- Header -->
  <header>
  <div class="header">
-    <div class="left"><a href="/index.html">TiP</a></div>
-    <div class="center"></div>
+    <div class="left"><a href="/index.html"><i class="fa-solid fa-house"></i></a></div>
+    <div class="center">Trust in Pat</div>
     <div class="right">$<span id="userBalance">1000</span></div>
  </div>
 </header>
