--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <span style="--i:8">0</span>
     <span style="--i:9">0</span>
     <span style="--i:10">0</span>
-    <br>SLOTS JACKPOT
+    <br>SPIN JACKPOT
    </div>
     
 
