--- a/nftspin.html
+++ b/nftspin.html
@@ -46,7 +46,7 @@
         <div>
             <img id="gen-img">
         </div>            
-        <div class="user-box2">    
+        <div class="user-box-nftSpinRes">    
             <section class="nftSpinRes">
                 <h2 id="nftSpinResultA" class=""><span id="nftSpinResult">Match 4: You Won $100</span></h2>
             </section>                  
