--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
          <a href="/nftspin.html">
         <Section id="game1" class="gameBox1">
             <img src="/assets/NFTSpin.gif">
-            <div>NFTspin</div>     
+            <div>NFTSpin</div>     
          </Section>
         </a>
 
