--- a/nftspin.html
+++ b/nftspin.html
@@ -88,9 +88,15 @@
             </div>
         </section>
         
-        <div>
-            <p><input type="button" value="Quick Draw" onclick="imgchangedraw1(); imgchangedraw2(); imgchangedraw3(); imgchangedraw4(); imgchangedraw5(); imgchangedraw6(); imgchangedraw7(); imgchangedraw8(); imgchangedraw9();" /></p>
-        </div>
+       <section id="payouts">
+        <h2>Payouts</h2>
+        Match 1: X
+        <br>
+        Match 2: Y
+        <br>
+        Match 3: Z
+
+       </section>
 
         
 
