--- a/nftspin.html
+++ b/nftspin.html
@@ -48,7 +48,7 @@
         </div>            
         <div class="user-box-nftSpinRes">    
             <section class="nftSpinRes">
-                <h2 id="nftSpinResultA" class=""><span id="nftSpinResult">Match 4: You Won $100</span></h2>
+                <h2 id="nftSpinResultA" class=""><span id="nftSpinResult">Match <span id="matchNumber"></span>: You Won $100</span></h2>
             </section>                  
         </div>
         
