--- a/nftspin.html
+++ b/nftspin.html
@@ -77,7 +77,7 @@
                   </div>
                   
 
-                  <a href="#" type="submit" onclick="imgchangedraw1(); imgchangedraw2(); imgchangedraw3(); imgchangedraw4(); imgchangedraw5(); imgchangedraw6(); imgchangedraw7(); imgchangedraw8(); imgchangedraw9();">
+                  <a href="#" type="submit" onclick="imgchangedraw1(); imgchangedraw2(); imgchangedraw3(); imgchangedraw4(); imgchangedraw5(); imgchangedraw6(); imgchangedraw7(); imgchangedraw8(); imgchangedraw9(); nftSpinTotalMatch(); ">
                     <span></span>
                     <span></span>
                     <span></span>
