--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  <!-- Header -->
  <header>
  <div class="header">
-    <div class="left"><a href="/home.html"><i class="fa-solid fa-house"></i></a></div>
+    <div class="left"><a href="/index.html"><i class="fa-solid fa-house"></i></a></div>
     <div class="center">Trust in Pat</div>
     <div class="right">$30</div>
  </div>
@@ -48,7 +48,7 @@
          <!-- Games -->
          <a href="/nftspin.html">
         <Section id="game1" class="gameBox1">
-            <img src="/assets/NFTSpin.gif">
+            <img src="assets/NFTSpin.gif">
             <div>NFTSpin</div>     
          </Section>
         </a>
@@ -57,7 +57,7 @@
 
          <a href="/anybet.html">
          <Section id="game2" class="gameBox2">
-            <img src="/assets/az1.png">
+            <img src="assets/az1.png">
             <div>Progressive Roulette</div>
          </Section>
         </a>
@@ -66,14 +66,14 @@
 
         <a href="/superflip.html">
          <Section id="game3" class="gameBox">
-            <img src="/assets/SuperFlip Gif.gif">
+            <img src="assets/SuperFlip Gif.gif">
             <div>SuperFlip</div>
          </Section>
         </a>
 
          <a href="/wenwin.html">
          <Section id="game4" class="gameBox">
-            <img src="/assets/wenwin.gif">
+            <img src="assets/wenwin.gif">
             <div>Wen-Win</div>
          </Section>
         </a>
@@ -96,32 +96,32 @@
 
         <a href="/sports.html">
          <Section id="game5" class="gameBox4">
-            <img src="/assets/bayc1.png">
+            <img src="assets/bayc1.png">
             <div>Sports</div>
          </Section>
         </a>
         <a href="/notzero.html">
             <Section id="game5" class="gameBox4">
-               <img src="/assets/bayc1.png">
+               <img src="assets/bayc1.png">
                <div>Not Zero</div>
             </Section>
            </a>
            <a href="/notzero.html">
             <Section id="game5" class="gameBox4">
-               <img src="/assets/bayc1.png">
+               <img src="assets/bayc1.png">
                <div>Not Zero</div>
             </Section>
            </a>
 
         <!-- Promos -->
         <Section id="promo1" class="promoBox">
-            <img src="/assets/Big Winner.png">
+            <img src="assets/Big Winner.png">
          </Section>
         <Section id="promo2" class="promoBox">
-            <img src="/assets/Megasol.png">
+            <img src="assets/Megasol.png">
          </Section>
          <Section id="promo3" class="promoBox">
-            <img src="/assets/Big Winner.png">
+            <img src="assets/Big Winner.png">
          </Section>
         
 
