--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  <!-- Header -->
  <header>
  <div class="header">
-    <div class="left"><a href="/index.html"><i class="fa-solid fa-house"></i></a></div>
+    <div class="left"><a href="index.html"><i class="fa-solid fa-house"></i></a></div>
     <div class="center">Trust in Pat</div>
     <div class="right">$30</div>
  </div>
@@ -46,7 +46,7 @@
         
         
          <!-- Games -->
-         <a href="/nftspin.html">
+         <a href="nftspin.html">
         <Section id="game1" class="gameBox1">
             <img src="assets/NFTSpin.gif">
             <div>NFTSpin</div>     
@@ -55,7 +55,7 @@
 
     <section id="game2Small" class="gameBox3Block">
 
-         <a href="/anybet.html">
+         <a href="anybet.html">
          <Section id="game2" class="gameBox2">
             <img src="assets/az1.png">
             <div>Progressive Roulette</div>
@@ -64,14 +64,14 @@
 
     <section id="game2Small" class="gameBox2Small">
 
-        <a href="/superflip.html">
+        <a href="superflip.html">
          <Section id="game3" class="gameBox">
             <img src="assets/SuperFlip Gif.gif">
             <div>SuperFlip</div>
          </Section>
         </a>
 
-         <a href="/wenwin.html">
+         <a href="wenwin.html">
          <Section id="game4" class="gameBox">
             <img src="assets/wenwin.gif">
             <div>Wen-Win</div>
@@ -83,7 +83,7 @@
 
 <section id="game6" class="bet-box1">
         <form>
-            <a href="/anybet.html">
+            <a href="anybet.html">
             <span></span>
             <span></span>
             <span></span>
@@ -94,19 +94,19 @@
         </form>
 </section>
 
-        <a href="/sports.html">
+        <a href="sports.html">
          <Section id="game5" class="gameBox4">
             <img src="assets/bayc1.png">
             <div>Sports</div>
          </Section>
         </a>
-        <a href="/notzero.html">
+        <a href="notzero.html">
             <Section id="game5" class="gameBox4">
                <img src="assets/bayc1.png">
                <div>Not Zero</div>
             </Section>
            </a>
-           <a href="/notzero.html">
+           <a href="notzero.html">
             <Section id="game5" class="gameBox4">
                <img src="assets/bayc1.png">
                <div>Not Zero</div>
