--- a/anybet.html
+++ b/anybet.html
@@ -20,7 +20,7 @@
  <!-- Header -->
  <header>
  <div class="header">
-    <div class="left"><a href="/index.html"><i class="fa-solid fa-house"></i></a></div>
+    <div class="left"><a href="index.html"><i class="fa-solid fa-house"></i></a></div>
     <div class="center">Trust in Pat</div>
     <div class="right">$<span id="userBalance">1000</span></div>
  </div>
