--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
             integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Orbitron">
         <link rel="stylesheet" href="assets/css/style.css">
                 
         <!-- Description, Kyewords, Title -->
@@ -21,7 +22,7 @@
  <header>
  <div class="header">
     <div class="left"><a href="index.html"><i class="fa-solid fa-house"></i></a></div>
-    <div class="center">Trust in Pat</div>
+    <div class="center">LOCOSINO</div>
     <div class="right">$30</div>
  </div>
 </header>
@@ -55,10 +56,10 @@
 
     <section id="game2Small" class="gameBox3Block">
 
-         <a href="anybet.html">
+         <a href="progressivewin.html">
          <Section id="game2" class="gameBox2">
             <img src="assets/az1.png">
-            <div>Progressive Roulette</div>
+            <div>Progressive Win</div>
          </Section>
         </a>
 
@@ -88,7 +89,7 @@
             <span></span>
             <span></span>
             <span></span>
-            <h2 class="anybetHeading">ANYBet</h2>
+            <h2 class="anybetHeading">ANYBET</h2>
             <i id="greyText">The Choice Is Yours</i>     
           </a>          
         </form>
@@ -96,20 +97,20 @@
 
         <a href="sports.html">
          <Section id="game5" class="gameBox4">
-            <img src="assets/bayc1.png">
+            <img src="assets/2.png">
             <div>Sports</div>
          </Section>
         </a>
         <a href="notzero.html">
             <Section id="game5" class="gameBox4">
-               <img src="assets/bayc1.png">
-               <div>Not Zero</div>
+               <img src="assets/5.png">
+               <div>Bonuses</div>
             </Section>
            </a>
            <a href="notzero.html">
             <Section id="game5" class="gameBox4">
-               <img src="assets/bayc1.png">
-               <div>Not Zero</div>
+               <img src="assets/1.png">
+               <div>Affiliates</div>
             </Section>
            </a>
 
@@ -119,9 +120,6 @@
          </Section>
         <Section id="promo2" class="promoBox">
             <img src="assets/Megasol.png">
-         </Section>
-         <Section id="promo3" class="promoBox">
-            <img src="assets/Big Winner.png">
          </Section>
         
 
