--- a/progressivewin.html
+++ b/progressivewin.html
@@ -21,7 +21,7 @@
  <header>
  <div class="header">
     <div class="left"><a href="index.html"><i class="fa-solid fa-house"></i></a></div>
-    <div class="center">Not Zero</div>
+    <div class="center">Progressive Win</div>
     <div class="right">$30</div>
  </div>
 </header>
