--- a/wallets.html
+++ b/wallets.html
@@ -20,7 +20,7 @@
  <!-- Header -->
  <header>
  <div class="header">
-    <div class="left"><a href="/index.html">TiP</a></div>
+    <div class="left"><a href="index.html">TiP</a></div>
     <div class="center">Wen-Win</div>
     <div class="right">$30</div>
  </div>
