--- a/superflip.html
+++ b/superflip.html
@@ -20,7 +20,7 @@
  <!-- Header -->
  <header>
  <div class="header">
-    <div class="left"><a href="/index.html">TiP</a></div>
+    <div class="left"><a href="index.html"><i class="fa-solid fa-house"></i></a></div>
     <div class="center">SuperFlip</div>
     <div class="right">$30</div>
  </div>
