--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
          </Section>
         </a>
 
-         <a href="wenwin.html">
+         <a href="rubic.html">
          <Section id="game4" class="gameBox">
             <img src="assets/wenwin.gif">
-            <div>Wen-Win</div>
+            <div>Rubic</div>
          </Section>
         </a>
 
