--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
          </Section>
         </a>
 
-         <a href="NFTwist.html">
+         <a href="nftwist.html">
          <Section id="game4" class="gameBox">
             <img src="assets/wenwin.gif">
             <div>NFTwist</div>
