--- a/nftspin.html
+++ b/nftspin.html
@@ -49,7 +49,7 @@
         </div>            
         <div class="user-box-nftSpinRes">    
             <section class="nftSpinRes">
-                <h2 id="nftSpinResultA" class=""><span id="nftSpinResult" class="spinRes">Match <span id="matchNumber"></span>: You Won</span></h2>
+                <h2 id="nftSpinResultA" class=""><span id="matchNumber"></span><br></h2>
             </section>                  
         </div>
         
