--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
          <a href="progressivewin.html">
          <Section id="game2" class="gameBox2">
             <img src="assets/az1.png">
-            <div>Progressive Win</div>
+            <div>Progressive</div>
          </Section>
         </a>
 
@@ -89,8 +89,8 @@
             <span></span>
             <span></span>
             <span></span>
-            <h2 class="anybetHeading">ANYBET</h2>
-            <i id="greyText">The Choice Is Yours</i>     
+            <h2 class="anybetHeading">ANYBET.</h2>
+            <i id="greyText">Instant Wins</i>     
           </a>          
         </form>
 </section>
