--- a/superflip.html
+++ b/superflip.html
@@ -46,7 +46,7 @@
           </div>
 
         <section class="anybetRes">
-            <h2 id="anybetResultA" class=""><span id="anybetResult">__</span></h2>
+            <h2 id="anybetResultA" class=""><span id="anybetResult"><br></span></h2>
         </section>
             <br>
           <a href="#" type="submit" onclick="betWin()">
