--- a/notzero.html
+++ b/notzero.html
@@ -30,7 +30,21 @@
 
 </section>
 
-<section class="jackpot">Jackpot</section>
+<section class="jackpot">
+    <div class="waviy">
+        <span style="--i:1">$</span>
+        <span style="--i:2">1</span>
+        <span style="--i:3">,</span>
+        <span style="--i:4">0</span>
+        <span style="--i:5">0</span>
+        <span style="--i:6">0</span>
+        <span style="--i:7">,</span>
+        <span style="--i:8">0</span>
+        <span style="--i:9">0</span>
+        <span style="--i:10">0</span>
+        <br>JACKPOT
+       </div>
+</section>
 <section class="game">Game</section>
 <section class="result">Result</section>
 <section class="button">Button</section>
