--- a/notzero.html
+++ b/notzero.html
@@ -45,7 +45,19 @@
         <br>JACKPOT
        </div>
 </section>
-<section class="game">Game</section>
+<section class="game">
+    <div class="rubic1"></div>
+    <div class="rubic2"></div>
+    <div class="rubic3"></div>
+    <div class="rubic4"></div>
+    <br>
+    <br>
+    <div class="bet-box">
+        <form>                   
+        <div class="user-box-nftSpin">
+            <input type="number" name="" required placeholder="Bet: $10" id="spin">                    
+        </div>
+</section>
 <section class="result">Result</section>
 <section class="button">Button</section>
 
