--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     </head>
 
  <!-- Header -->
- <header>
- <div class="header">
-    <div class="left"><a href="index.html"><i class="fa-solid fa-house"></i></a></div>
-    <div class="center">LOCOSINO</div>
-    <div class="right">$30</div>
- </div>
-</header>
+ <section class="container">
+    <header>
+       <div class="header">
+           <div class="leftHeader"><a href="index.html"><i class="fa-solid fa-house"></i></a></div>
+           <div class="centerHeader">LOCOSINO</div>
+       <div class="rightHeader">$<span id="userBalance">1000</span></div>
+       </div>
+      </header>
 
 <div class="waviy">
     <span style="--i:1">$</span>
@@ -124,7 +125,7 @@
         
 
 
-
+        </section>
 
         <script src="assets/js/script.js"></script>
         <!--font awesome script-->
