--- a/superflip.html
+++ b/superflip.html
@@ -19,13 +19,14 @@
     </head>
 
  <!-- Header -->
- <header>
-    <div class="header">
-        <div class="left"><a href="index.html"><i class="fa-solid fa-house"></i></a></div>
-        <div class="center">LOCOSINO</div>
-    <div class="right">$<span id="userBalance">1000</span></div>
-    </div>
-   </header>
+ <section class="container">
+    <header>
+       <div class="header">
+           <div class="leftHeader"><a href="index.html"><i class="fa-solid fa-house"></i></a></div>
+           <div class="centerHeader">LOCOSINO</div>
+       <div class="rightHeader">$<span id="userBalance">1000</span></div>
+       </div>
+      </header>
    
    
    <section>
@@ -60,7 +61,7 @@
     </div>
 </section>
 
-    <body>
+</section>
         
         <script src="assets/js/script.js"></script>
         <!--font awesome script-->
