--- a/anybet.html
+++ b/anybet.html
@@ -39,15 +39,15 @@
             <form>
                 <p class="anybetFieldTitles">BET</p>
               <div class="user-box">
-                <input type="number" name="" required placeholder="10" id="bet">
+                <input type="number" name="" required placeholder="$10" id="bet">
                 
               </div>
               <p class="anybetFieldTitles">TO WIN</p>
               <div class="user-box2">
-                <input type="number" name="" required placeholder="1000" id="win"> 
+                <input type="number" name="" required placeholder="$1000" id="win"> 
 
             <section class="anybetRes">
-                <h2 id="anybetResultA" class=""><span id="anybetResult">__</span></h2>
+                <h2 id="anybetResultA" class=""><span id="anybetResult"><br></span></h2>
             </section>
                 
               </div>
