--- a/anybet.html
+++ b/anybet.html
@@ -54,7 +54,8 @@
                       
             </form>
         </div>
-    </section class="button">
+    </section>
+<section class="button">
     <div class="bet-box">
         <form>
         <a href="#" type="submit" onclick="betWin()">
