--- a/nftwist.html
+++ b/nftwist.html
@@ -21,9 +21,9 @@
  <!-- Header -->
  <header>
     <div class="header">
-        <div class="left"><a href="index.html"><i class="fa-solid fa-house"></i></a></div>
-        <div class="center">LOCOSINO</div>
-    <div class="right">$<span id="userBalance">1000</span></div>
+        <div class="leftHeader"><a href="index.html"><i class="fa-solid fa-house"></i></a></div>
+        <div class="centerHeader">LOCOSINO</div>
+    <div class="rightHeader">$<span id="userBalance">1000</span></div>
     </div>
    </header>
 
@@ -52,7 +52,8 @@
         <div class="user-box-nftSpin">
             <input type="number" name="" required placeholder="Bet: $10" id="spin">                    
         </div>
-
+<br>
+<br>
 
           <a href="#" type="submit" onclick="betWin()">
             <span></span>
