--- a/superflip.html
+++ b/superflip.html
@@ -41,15 +41,18 @@
     <div class="bet-box">
         <form>
             <p class="anybetFieldTitles">Win up to 10x your bet</p>
+            <br>
+            <section class="superflipGif">
+                <img src="assets/SuperFlip Gif.gif">
+            </section>
+            <br>
           <div class="user-box">
             <input type="number" name="" required placeholder="$10" id="bet">
-            
-          </div>
+            </div>       
 
         <section class="anybetRes">
             <h2 id="anybetResultA" class=""><span id="anybetResult"><br></span></h2>
         </section>
-            <br>
           <a href="#" type="submit" onclick="betWin()">
             <span></span>
             <span></span>
