--- a/nftspin.html
+++ b/nftspin.html
@@ -53,7 +53,7 @@
             </section>                  
         </div>
         
-
+<section class="slots">
         <div>
             <p></p>
             <img id="gen-img1" class="draw">
@@ -68,6 +68,7 @@
 
             <p></p>
         </div>
+</section>
 
         <section>
             <div class="bet-box">
