--- a/nftspin.html
+++ b/nftspin.html
@@ -92,25 +92,27 @@
         <br>
         <br>
        <section id="payouts">
-        <h2>Payouts</h2>
-        Match 1: X
+        <h2>Jackpot Payouts</h2>
+        Match 1: 1.5X
         <br>
-        Match 2: X
+        Match 2: 10X
         <br>
-        Match 3: X
+        Match 3: 50X
         <br>
-        Match 4: X
+        Match 4: 250X
         <br>
-        Match 5: X
+        Match 5: 1250X
         <br>
-        Match 6: X
+        Match 6: 5000X
         <br>
-        Match 7: X
+        Match 7: 25000X
         <br>
-        Match 8: X
+        Match 8: 125000X
         <br>
-        Match 9: X + $1,000,000
+        Match 9: JACKPOT!!!
         <br>
+        <br>
+        Minimum Bet for Jacpot payouts: $1
         </section>
         <br>
         <br>
