--- a/nftspin.html
+++ b/nftspin.html
@@ -112,7 +112,8 @@
         Match 9: JACKPOT!!!
         <br>
         <br>
-        Minimum Bet for Jacpot payouts: $1
+        *Minimum Bet for Jackpot payouts: $1*
+        <br>
         </section>
         <br>
         <br>
