--- a/nftspin.html
+++ b/nftspin.html
@@ -91,7 +91,7 @@
         </section>
         <br>
         <br>
-       <section id="payouts">
+       <section id="payouts" class="payouts">
         <h2>Jackpot Payouts</h2>
         Match 1: 1.5X
         <br>
