--- a/nftspin.html
+++ b/nftspin.html
@@ -93,26 +93,25 @@
         <br>
        <section id="payouts" class="payouts">
         <h2>Jackpot Payouts</h2>
-        Match 1: 1.5X
         <br>
-        Match 2: 2X
+        Match 2: 1.25X
         <br>
-        Match 3: 4.5X
+        Match 3: 2X
         <br>
-        Match 4: 15X
+        Match 4: 2.5X
         <br>
-        Match 5: 75X
+        Match 5: 5X
         <br>
-        Match 6: 500X
+        Match 6: 50X
         <br>
-        Match 7: 7777X
+        Match 7: 500X
         <br>
-        Match 8: 125000X
+        Match 8: 10,000
         <br>
         Match 9: JACKPOT!!!
         <br>
         <br>
-        *Minimum Bet for Jackpot payouts: $1*
+        *Minimum Bet for Jackpot payout: $1*
         <br>
         </section>
         <br>
